= Gentics Mesh Changelog

== 0.8.0 (Pending)

* __[Enhancement]__ The no longer needed schemaReference property was removed from node update requests.

* __[Enhancement]__ The rootNodeUuid property within node project response was changed. 

[quote, Example]
____
Old structure:
[source,json]
----
{
…
  "rootNodeUuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
…
}
----

New structure:
[source,json]
----
{
…
  "rootNode": {
    "uuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
  },
…
}
----
____

* __[Enhancement]__ The parentNodeUuid property within node create requests was changed. 

[quote, Example]
____
Old structure:
[source,json]
----
{
…
  "parentNodeUuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
…
}
----

New structure:
[source,json]
----
{
…
  "parentNode": {
    "uuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
  },
…
}
----
____

* __[Enhancement]__ JSON Schema information have been added to the RAML API documentation 

* __[Enhancement]__ The navigation response JSON was restructured. The root element was removed. 

[quote, Example]
____
Old structure:
[source,json]
----
{
  "root" : {
    "uuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
    "node" : {…},
    "children" : […]
  }
}
----

New structure:
[source,json]
----
{
  "uuid" : "cd5ac8943a4448ee9ac8943a44a8ee25",
  "node" : {…},
  "children" : […]
}
----
____

== 0.7.0 (SNAPSHOT)

* __[Feature]__ Content releases support

[quote]
____
This version of Gentics Mesh introduces _Content Releases_. A detailed description of this feature can be found in our [Documentation](http://getmesh.io/docs/beta/index.html).
____

* __[Feature]__ Versioning support

[quote]
____
This version of Gentics Mesh introduces versioning of contents. A detailed description of the versioning feature can be found in our [Documentation](http://getmesh.io/docs/beta/index.html).

Important changes summary:

* Node update request must now include the version information