@@ -35,7 +35,7 @@ public class EventbusEndpoint extends AbstractEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		addEventBusHandler();
 	}
 
