@@ -43,7 +43,7 @@ public class MicroschemaEndpoint extends AbstractEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addDiffHandler();
 		addChangesHandler();
