@@ -40,7 +40,7 @@ public class RoleEndpoint extends AbstractEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addCreateHandler();
 		addReadHandler();
