@@ -48,7 +48,7 @@ public class SchemaEndpoint extends AbstractEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addReadHandlers();
 
