@@ -31,7 +31,7 @@ public class WebRootEndpoint extends AbstractProjectEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addErrorHandlers();
 		addPathHandler();
