@@ -60,7 +60,7 @@ public class ProjectSearchEndpoint extends AbstractProjectEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addSearchEndpoints();
 	}
