@@ -92,7 +92,7 @@ public class SearchEndpoint extends AbstractEndpoint {
 	}
 
 	@Override
-	public void registerEndPoints() throws Exception {
+	public void registerEndPoints() {
 		secureAll();
 		addSearchEndpoints();
 	}
